--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
   "dependencies": {
     "axios": "^0.19.0",
     "core-js": "^3.4.3",
+    "echarts": "^4.9.0",
     "element-ui": "^2.13.0",
+    "install": "^0.13.0",
     "js-md5": "^0.7.3",
     "qs": "^6.9.4",
+    "v-charts": "^1.19.0",
     "vue": "^2.6.10",
+    "vue-echarts": "^5.0.0-beta.0",
     "vue-router": "^3.1.3",
     "vuex": "^3.1.2"
   },
